fix: dark mode and congrats words bugs

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -62,7 +62,7 @@ button {
   justify-content: center;
   font-size: 0.9375rem;
   border-radius: 0.3rem;
-  font-weight: medium;
+  font-weight: 400;
   cursor: pointer;
   font-family: Poppins, sans-serif;
   /* margin: 1.2rem auto 1.2rem; */
