--- a/src/components/Intro.module.css
+++ b/src/components/Intro.module.css
@@ -39,10 +39,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 0.9rem;
+  font-size: 0.9375rem;
   /* font-size: large; */
-  border-radius: 5px;
-  font-weight: medium;
+  border-radius: 0.3rem;
+  font-weight: 400;
   cursor: pointer;
   font-family: Poppins, sans-serif;
 }
